syntax = "proto3";

package webitel_logger;

option go_package = "webitel_logger/proto";

service ConfigService {
  rpc UpdateConfig(UpdateConfigRequest) returns (Config) {}
  rpc GetConfigByObjectId(GetConfigByObjectIdRequest) returns (Config) {}
  rpc GetAllConfigs(GetAllConfigsRequest) returns (Configs) {}
}


message Configs {
  repeated Config configs = 1;
}
message Config {
  int32 id = 1;
  int32	objectId = 2;
  bool enabled = 3;
  int32 daysToStore = 4;
  string period = 5;
  int32 storageId = 6;
  int32 domainId = 7;
}

message GetConfigByObjectIdRequest {
//  int32 page = 1;
//  int32 size = 2;
//  string q = 3;
//
//  string sort = 5;
//  repeated string fields = 6;

  int32 objectId = 7;
  int32 domainId = 8;
}

message GetAllConfigsRequest {
  int32 page = 1;
  int32 size = 2;
  string q = 3;

  string sort = 5;
  repeated string fields = 6;

  int32 domainId = 7;
}

message UpdateConfigRequest {
  int32 domainId = 1;
  int32 objectId = 2;
  bool enabled = 3;
  int32 daysToStore = 4;
  string period = 5;
  int32 storageId = 6;

}